--- a/portfolio.html
+++ b/portfolio.html
@@ -117,14 +117,14 @@
                   src="./images/portfolio/technocrack_450_294.jpg"
                   alt="Laptop monitor"
                   srcset="
-                 images/portfolio/technocrack_354_294.jpg 354w,
-                 images/portfolio/technocrack_370_294.jpg 370w,
-                  images/portfolio/technocrack_450_294.jpg 450w,
-                 images/portfolio/technocrack_708_588.jpg 708w,
-                  images/portfolio/technocrack_740_588.jpg 740w
-                  images/portfolio/technocrack_900_588.jpg 900w,
-                "
-                  sizes="(min-width: 1200px) 370px ,(min-width: 678px) 354px (min-width:480px) 450px, 100vw"
+                    images/portfolio/technocrack_354_294.jpg 354w,
+                    images/portfolio/technocrack_370_294.jpg 370w,
+                    images/portfolio/technocrack_450_294.jpg 450w,
+                    images/portfolio/technocrack_708_588.jpg 708w,
+                    images/portfolio/technocrack_740_588.jpg 740w,
+                    images/portfolio/technocrack_900_588.jpg 900w
+                  "
+                  sizes="(min-width: 1200px) 370px,(min-width: 678px) 354px, (min-width:480px) 450px, 100vw"
                 />
                 <div class="products__overlay">
                   <p>
@@ -152,7 +152,7 @@
                     images/portfolio/neworlean_740_588.jpg 740w,
                     images/portfolio/neworlean_900_588.jpg 900w
                   "
-                  sizes="(min-width: 1200px) 370px ,(min-width: 678px) 354px (min-width:480px) 450px, 100vw"
+                  sizes="(min-width: 1200px) 370px,(min-width: 678px) 354px, (min-width:480px) 450px, 100vw"
                 />
                 <div class="products__overlay">
                   <p>
@@ -180,7 +180,7 @@
                     images/portfolio/restaurant_740_588.jpg 740w,
                     images/portfolio/restaurant_900_588.jpg 900w
                   "
-                  sizes="(min-width: 1200px) 370px ,(min-width: 678px) 354px (min-width:480px) 450px, 100vw"
+                  sizes="(min-width: 1200px) 370px,(min-width: 678px) 354px, (min-width:480px) 450px, 100vw"
                 />
                 <div class="products__overlay">
                   <p>
@@ -208,7 +208,7 @@
                     images/portfolio/projectprime_740_588.jpg 740w,
                     images/portfolio/projectprime_900_588.jpg 900w
                   "
-                  sizes="(min-width: 1200px) 370px ,(min-width: 678px) 354px (min-width:480px) 450px, 100vw"
+                  sizes="(min-width: 1200px) 370px,(min-width: 678px) 354px, (min-width:480px) 450px, 100vw"
                 />
                 <div class="products__overlay">
                   <p>
@@ -236,7 +236,7 @@
                     images/portfolio/projectboxes_740_588.jpg 740w,
                     images/portfolio/projectboxes_900_588.jpg 900w
                   "
-                  sizes="(min-width: 1200px) 370px ,(min-width: 678px) 354px (min-width:480px) 450px, 100vw"
+                  sizes="(min-width: 1200px) 370px,(min-width: 678px) 354px, (min-width:480px) 450px, 100vw"
                 />
                 <div class="products__overlay">
                   <p>
@@ -264,7 +264,7 @@
                     images/portfolio/inspiration_740_588.jpg 740w,
                     images/portfolio/inspiration_900_588.jpg 900w
                   "
-                  sizes="(min-width: 1200px) 370px ,(min-width: 678px) 354px (min-width:480px) 450px, 100vw"
+                  sizes="(min-width: 1200px) 370px,(min-width: 678px) 354px, (min-width:480px) 450px, 100vw"
                 />
                 <div class="products__overlay">
                   <p>
@@ -292,7 +292,7 @@
                     images/portfolio/magazine_740_588.jpg 740w,
                     images/portfolio/magazine_900_588.jpg 900w
                   "
-                  sizes="(min-width: 1200px) 370px ,(min-width: 678px) 354px (min-width:480px) 450px, 100vw"
+                  sizes="(min-width: 1200px) 370px,(min-width: 678px) 354px, (min-width:480px) 450px, 100vw"
                 />
                 <div class="products__overlay">
                   <p>
@@ -320,7 +320,7 @@
                     images/portfolio/projectlab_740_588.jpg 740w,
                     images/portfolio/projectlab_900_588.jpg 900w
                   "
-                  sizes="(min-width: 1200px) 370px ,(min-width: 678px) 354px (min-width:480px) 450px, 100vw"
+                  sizes="(min-width: 1200px) 370px,(min-width: 678px) 354px, (min-width:480px) 450px, 100vw"
                 />
                 <div class="products__overlay">
                   <p>
@@ -348,7 +348,7 @@
                     images/portfolio/growingbusiness_740_588.jpg 740w,
                     images/portfolio/growingbusiness_900_588.jpg 900w
                   "
-                  sizes="(min-width: 1200px) 370px ,(min-width: 678px) 354px (min-width:480px) 450px, 100vw"
+                  sizes="(min-width: 1200px) 370px ,(min-width: 678px) 354px, (min-width:480px) 450px, 100vw"
                 />
                 <div class="products__overlay">
                   <p>
