--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
                   images/ourteam/ourteam1_354_374.jpg 354w,
                   images/ourteam/ourteam1_270_260.jpg 270w
                 "
+                sizes="(min-width: 1200px) 270px, (min-width: 678px) 354px, (min-width:480px) 450px, 100vw"
               />
               <h3 class="ourteam__name">John Doe</h3>
               <p class="ourteam__position">Product Designer</p>
@@ -265,7 +266,7 @@
                   images/ourteam/ourteam2_354_374.jpg 354w,
                   images/ourteam/ourteam2_270_260.jpg 270w
                 "
-                sizes="(min-width: 1200px) 270px ,(min-width: 678px) 354px (min-width:480px) 450px, 100vw"
+                sizes="(min-width: 1200px) 270px, (min-width: 678px) 354px, (min-width:480px) 450px, 100vw"
               />
               <h3 class="ourteam__name">John Doe</h3>
               <p class="ourteam__position">Frontend Developer</p>
@@ -307,7 +308,7 @@
                   images/ourteam/ourteam3_354_374.jpg 354w,
                   images/ourteam/ourteam3_270_260.jpg 270w
                 "
-                sizes="(min-width: 1200px) 270px ,(min-width: 678px) 354px (min-width:480px) 450px, 100vw"
+                sizes="(min-width: 1200px) 270px ,(min-width: 678px) 354px, (min-width:480px) 450px, 100vw"
               />
               <h3 class="ourteam__name">John Doe</h3>
               <p class="ourteam__position">Marketing</p>
@@ -349,7 +350,7 @@
                   images/ourteam/ourteam4_354_374.jpg 354w,
                   images/ourteam/ourteam4_270_260.jpg 270w
                 "
-                sizes="(min-width: 1200px) 270px ,(min-width: 678px) 354px (min-width:480px) 450px, 100vw"
+                sizes="(min-width: 1200px) 270px ,(min-width: 678px) 354px, (min-width:480px) 450px, 100vw"
               />
               <h3 class="ourteam__name">John Doe</h3>
               <p class="ourteam__position">UI Designer</p>
